{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 349,
  "lineage": "5ec37c70-0f33-3726-a939-3f89e5fffea7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_IP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0ff1b3c3a8b1c8085",
            "domain": "vpc",
            "id": "eipalloc-0bfd048e38c09a923",
            "network_border_group": "us-west-2",
            "network_interface": "eni-02a22358f6c9e8780",
            "private_dns": "ip-10-30-255-40.us-west-2.compute.internal",
            "private_ip": "10.30.255.40",
            "public_dns": "ec2-44-236-194-144.us-west-2.compute.amazonaws.com",
            "public_ip": "44.236.194.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "QA",
              "Name": "NAT IP for NAT Gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:639716861848:internet-gateway/igw-03215186077d24b6b",
            "id": "igw-03215186077d24b6b",
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-0ae129824673f5f2f"
          },
          "dependencies": [
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NATGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bfd048e38c09a923",
            "id": "nat-0f137c4b687627b73",
            "network_interface_id": "eni-02a22358f6c9e8780",
            "private_ip": "10.30.255.40",
            "public_ip": "44.236.194.144",
            "subnet_id": "subnet-03255208287e1b2ba",
            "tags": {
              "Env": "QA",
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.NAT_IP",
            "aws_subnet.NATSubnet",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NATRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0645a8bbd4c7d8275",
            "owner_id": "639716861848",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f137c4b687627b73",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "QA",
              "Name": "NAT RT Subnet"
            },
            "vpc_id": "vpc-0ae129824673f5f2f"
          },
          "dependencies": [
            "aws_eip.NAT_IP",
            "aws_nat_gateway.NATGW",
            "aws_subnet.NATSubnet",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bbab37430ecb7b95",
            "owner_id": "639716861848",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03215186077d24b6b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "QA",
              "Name": "Public RT"
            },
            "vpc_id": "vpc-0ae129824673f5f2f"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.stage_qa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "NATRTAssignA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002cff3e4b1fb8f64",
            "route_table_id": "rtb-0645a8bbd4c7d8275",
            "subnet_id": "subnet-01a85916ecfa553d8"
          },
          "dependencies": [
            "aws_eip.NAT_IP",
            "aws_nat_gateway.NATGW",
            "aws_route_table.NATRT",
            "aws_subnet.NATSubnet",
            "aws_subnet.PrivateSubnetA",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "NATRTAssignB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027f86c51fe6d886c",
            "route_table_id": "rtb-0645a8bbd4c7d8275",
            "subnet_id": "subnet-048ff47fc3c7fd2d1"
          },
          "dependencies": [
            "aws_eip.NAT_IP",
            "aws_nat_gateway.NATGW",
            "aws_route_table.NATRT",
            "aws_subnet.NATSubnet",
            "aws_subnet.PrivateSubnetB",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "NATRTAssignC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6fdc83b727a2d49",
            "route_table_id": "rtb-0645a8bbd4c7d8275",
            "subnet_id": "subnet-0419141d53e486ff5"
          },
          "dependencies": [
            "aws_eip.NAT_IP",
            "aws_nat_gateway.NATGW",
            "aws_route_table.NATRT",
            "aws_subnet.NATSubnet",
            "aws_subnet.PrivateSubnetC",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "NATSubnetAssign",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d95a6c8d99a66ce",
            "route_table_id": "rtb-0bbab37430ecb7b95",
            "subnet_id": "subnet-03255208287e1b2ba"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.NATSubnet",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTAssignA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd6b6110754109fd",
            "route_table_id": "rtb-0bbab37430ecb7b95",
            "subnet_id": "subnet-0b7cd930211b4490b"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.PublicSubnetA",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTAssignB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1a7fdd4dcb6b8e2",
            "route_table_id": "rtb-0bbab37430ecb7b95",
            "subnet_id": "subnet-04ba5c110d99f4673"
          },
          "dependencies": [
            "aws_eks_cluster.qa_cluster",
            "aws_iam_role.qa_cluster_iam_role",
            "aws_iam_role_policy_attachment.qa_cluster-AmazonEKSClusterPolicy",
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_security_group.EKSCluster",
            "aws_subnet.PublicSubnetA",
            "aws_subnet.PublicSubnetB",
            "aws_subnet.PublicSubnetC",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicRTAssignC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0828d86aacd0e0a35",
            "route_table_id": "rtb-0bbab37430ecb7b95",
            "subnet_id": "subnet-0449a447b5c9d2f7e"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_route_table.PublicRT",
            "aws_subnet.PublicSubnetC",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MongoSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:639716861848:subnet/subnet-0e56da62e27c59ffb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.30.250.0/24",
            "id": "subnet-0e56da62e27c59ffb",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Mongo Subnet"
            },
            "vpc_id": "vpc-0ae129824673f5f2f"
          },
          "dependencies": [
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "NATSubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:639716861848:subnet/subnet-03255208287e1b2ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.30.255.0/24",
            "id": "subnet-03255208287e1b2ba",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "NAT Subnet"
            },
            "vpc_id": "vpc-0ae129824673f5f2f"
          },
          "dependencies": [
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:639716861848:subnet/subnet-01a85916ecfa553d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.30.10.0/24",
            "id": "subnet-01a85916ecfa553d8",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Private Subnet A"
            },
            "vpc_id": "vpc-0ae129824673f5f2f"
          },
          "dependencies": [
            "aws_eip.NAT_IP",
            "aws_nat_gateway.NATGW",
            "aws_subnet.NATSubnet",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:639716861848:subnet/subnet-048ff47fc3c7fd2d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.30.11.0/24",
            "id": "subnet-048ff47fc3c7fd2d1",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Private Subnet B"
            },
            "vpc_id": "vpc-0ae129824673f5f2f"
          },
          "dependencies": [
            "aws_eip.NAT_IP",
            "aws_nat_gateway.NATGW",
            "aws_subnet.NATSubnet",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:639716861848:subnet/subnet-0419141d53e486ff5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.30.12.0/24",
            "id": "subnet-0419141d53e486ff5",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Private Subnet C"
            },
            "vpc_id": "vpc-0ae129824673f5f2f"
          },
          "dependencies": [
            "aws_eip.NAT_IP",
            "aws_nat_gateway.NATGW",
            "aws_subnet.NATSubnet",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:639716861848:subnet/subnet-0b7cd930211b4490b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.30.0.0/24",
            "id": "subnet-0b7cd930211b4490b",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Public Subnet A"
            },
            "vpc_id": "vpc-0ae129824673f5f2f"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:639716861848:subnet/subnet-04ba5c110d99f4673",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.30.1.0/24",
            "id": "subnet-04ba5c110d99f4673",
            "map_public_ip_on_launch": true,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Public Subnet B",
              "kubernetes.io/cluster/qa_cluster": "shared"
            },
            "vpc_id": "vpc-0ae129824673f5f2f"
          },
          "dependencies": [
            "aws_eks_cluster.qa_cluster",
            "aws_iam_role.qa_cluster_iam_role",
            "aws_iam_role_policy_attachment.qa_cluster-AmazonEKSClusterPolicy",
            "aws_internet_gateway.IGW",
            "aws_security_group.EKSCluster",
            "aws_subnet.PublicSubnetA",
            "aws_subnet.PublicSubnetC",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:639716861848:subnet/subnet-0449a447b5c9d2f7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.30.2.0/24",
            "id": "subnet-0449a447b5c9d2f7e",
            "map_public_ip_on_launch": false,
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "Public Subnet C"
            },
            "vpc_id": "vpc-0ae129824673f5f2f"
          },
          "dependencies": [
            "aws_internet_gateway.IGW",
            "aws_vpc.stage_qa",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "stage_qa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:639716861848:vpc/vpc-0ae129824673f5f2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.30.0.0/16",
            "default_network_acl_id": "acl-004c9c17c931fc4f5",
            "default_route_table_id": "rtb-03a8a82863f4580ea",
            "default_security_group_id": "sg-0993f4d8e44a560a6",
            "dhcp_options_id": "dopt-a3c55bc5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ae129824673f5f2f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03a8a82863f4580ea",
            "owner_id": "639716861848",
            "tags": {
              "Env": "QA",
              "Name": "DIL VPC QA"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "jenkins_ns",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "run": "jenkins"
                },
                "name": "jenkins",
                "resource_version": "3752",
                "self_link": "/api/v1/namespaces/jenkins",
                "uid": "05dd700f-2cc4-4fdc-bf78-469c2bc55eeb"
              }
            ]
          },
          "dependencies": [
            "aws_eks_cluster.qa_cluster",
            "data.aws_eks_cluster_auth.qa_cluster_auth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "jenkins_agent_svc",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins/jenkins-agent",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "run": "jenkins-agent"
                },
                "name": "jenkins-agent",
                "namespace": "jenkins",
                "resource_version": "32738",
                "self_link": "/api/v1/namespaces/jenkins/services/jenkins-agent",
                "uid": "23417192-39ee-40be-be46-18d09a45d955"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.82.227",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 50000,
                    "protocol": "TCP",
                    "target_port": "50000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "run": "jenkins-agent"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ]
          },
          "dependencies": [
            "aws_eks_cluster.qa_cluster",
            "aws_eks_node_group.qa_cluster_node",
            "data.aws_eks_cluster_auth.qa_cluster_auth",
            "kubernetes_namespace.jenkins_ns"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "jenkins_svc",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "jenkins/jenkins-service",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "run": "jenkins"
                },
                "name": "jenkins-service",
                "namespace": "jenkins",
                "resource_version": "12298",
                "self_link": "/api/v1/namespaces/jenkins/services/jenkins-service",
                "uid": "b49639b6-c6c0-4c05-ab7c-e8928bd48c5e"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.83.175",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 32300,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "run": "jenkins"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ]
          },
          "dependencies": [
            "aws_eks_cluster.qa_cluster",
            "aws_eks_node_group.qa_cluster_node",
            "aws_iam_role.qa_cluster_iam_eks-node-group",
            "aws_iam_role_policy_attachment.qa_cluster-AmazonEC2ContainerRegistryReadOnly",
            "aws_iam_role_policy_attachment.qa_cluster-AmazonEKSWorkerNodePolicy",
            "aws_iam_role_policy_attachment.qa_cluster-AmazonEKS_CNI_Policy",
            "aws_subnet.PublicSubnetB",
            "data.aws_eks_cluster_auth.qa_cluster_auth",
            "kubernetes_namespace.jenkins_ns"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "local_repo_svc",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/local-registry-svc",
            "metadata": [
              {
                "generation": 0,
                "name": "local-registry-svc",
                "namespace": "default",
                "resource_version": "3758",
                "self_link": "/api/v1/namespaces/default/services/local-registry-svc",
                "uid": "2d0203b7-b099-489d-a918-12ddc31974f7"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.204.102",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 0,
                    "port": 5000,
                    "protocol": "TCP",
                    "target_port": "5000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "k8s-app": "local-registry"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ]
          },
          "dependencies": [
            "aws_eks_cluster.qa_cluster",
            "data.aws_eks_cluster_auth.qa_cluster_auth"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "prometheus_svc",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "default/prometheus-svc",
            "metadata": [
              {
                "generation": 0,
                "name": "prometheus-svc",
                "namespace": "default",
                "resource_version": "3791",
                "self_link": "/api/v1/namespaces/default/services/prometheus-svc",
                "uid": "7a233b03-9826-4998-acc5-d6c0c07f8ce4"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.90.48",
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "port": [
                  {
                    "node_port": 32090,
                    "port": 9090,
                    "protocol": "TCP",
                    "target_port": "9090"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "k8s-app": "prometheus"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ]
          },
          "dependencies": [
            "aws_eks_cluster.qa_cluster",
            "data.aws_eks_cluster_auth.qa_cluster_auth",
            "kubernetes_stateful_set.prometheus"
          ]
        }
      ]
    }
  ]
}